--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@unvt/sprite-one": "^0.1.1",
     "lefthook": "^1.8.4",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vite": "^5.4.11"
   },
